samples/_failures_safe/1761278044_292b3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8540e972.c: In function ‘main’:
./samples/SAFE/__tmp_8540e972.c:159:12: error: missing terminating " character
  159 |     printf("WARNING: %
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_8540e972.c:159:5: error: expected expression at end of input
  159 |     printf("WARNING: %
      |     ^~~~~~
./samples/SAFE/__tmp_8540e972.c:159:5: error: expected declaration or statement at end of input
